fix: contrast in search popup

--- a/dokka-subprojects/plugin-base-frontend/src/main/components/search/search.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/components/search/search.scss
@@ -83,7 +83,7 @@ span[data-test-custom='ring-select-popup-filter-icon'] {
 
   border: 1px solid hsla(0deg, 0%, 100%, 0.2) !important;
 
-  background-color: #27282c !important;
+  background-color: #262628 !important;
 
   @media (width < $breakpoint-desktop-min) {
     top: 41px !important;
